--- a/app/views/offices/show.html.erb
+++ b/app/views/offices/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Offices#show</h1>
-<p>Find me in app/views/offices/show.html.erb</p>
+<div class="container">
+
+  <div class="card-trip">
+    <%= cl_image_tag @office.photo %>
+    <div class="card-trip-infos">
+      <div>
+        <h2><%= @office.name %></h2>
+        <p><%= @office.description %></p>
+      </div>
+      <h2 class="card-trip-pricing">€15</h2>
+      <%= image_tag @office.user.avatar, class: "card-trip-user avatar-bordered" %>
+    </div>
+  </div>
+
+
+</div>
+
+
+
