End of creating the review new page before styling

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -18,7 +18,7 @@
       <h2>No bookings made so far...</h2>
       <% else %>
       <div class="card-dashboard">
-        <%= cl_image_tag booking.office.photo %>
+        <%= cl_image_tag @booking.office.photo %>
         <div class="card-dashboard-infos">
           <div class="d-flex">
             <div class="card-left">
