--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Reviews#new</h1>
-<p>Find me in app/views/reviews/new.html.erb</p>
+<div class="container">
+  <div class="form-content mt-5">
+    <%= simple_form_for [@booking, @review] do |b| %>
+    <%= b.input :content, as: :text %>
+    <%= b.input :rating, collection: 0..5 %>
+    <div align="center"><%= b.submit "Submit now" %>
+    </div>
+  </div>
+  <% end %>
+</div>
