--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -38,8 +38,11 @@
         <% end %>
       </div>
     </div>
-    <div class="tab-pane" id="map">
-      <h3>Display Map</h3>
+    <div class="tab-pane" id="map"
+          style="width: 100%;
+          height: 600px;"
+          data-markers="<%= @markers.to_json %>"
+          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
   </div>
 </div>
