--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -28,7 +28,9 @@
             </div>
             <div class="card-right">
               <h3>Edit/delete</h3>
+              <% if @booking.status == "closed" %>
               <h3>Add review</h3>
+              <% end %>
             </div>
           </div>
         </div>
