--- a/app/views/offices/show.html.erb
+++ b/app/views/offices/show.html.erb
@@ -84,7 +84,14 @@
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 
+  <br>
+  <div>
+  <h2>Date</h2>
 
+<%= render "bookings/new", office: @office, booking: @booking%>
+
+  <%= link_to "Reserve", booking_path, class: "btn-ghost" %></a>
+</div>
 
 
 </div>
