--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,8 @@
 // Specific CSS for your home-page
+#banner-container {
+  background-image: url(banner-pic.jpg);
+  height: 91vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom 1px right 0px;
+}
