show page fixed with flatpickr

--- a/app/views/offices/show.html.erb
+++ b/app/views/offices/show.html.erb
@@ -85,8 +85,8 @@
   </div>
 
   <br>
-  <div>
-  <h2>Date</h2>
+  <div class="show-flatpickr">
+  <h3>Date</h3>
 
 <%= render "bookings/new", office: @office, booking: @booking%>
 
@@ -95,7 +95,3 @@
 
 
 </div>
-
-
-
-<%= render "bookings/new", office: @office, booking: Booking.new %>
