Updated navbar for collapse

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,11 @@
 // Specific CSS for your home-page
+.sign-in-image {
+
+  .myform-outline {
+    background-color: #F4F4F4;
+    margin-bottom: 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+    padding: 15px;
+  }
+}
