--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,23 +1,31 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
+<!--Navbar-->
+<nav class="navbar navbar-expand-sm navbar-light navbar-lewagon">
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <!-- Navbar brand -->
+  <%= link_to "#", class: "navbar-brand" do %>
+    <%= image_tag "logo.png" %>
+  <% end %>
+
+  <!-- Collapse button -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-
+  <!-- Collapsible content -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+
+    <!-- Links -->
+    <ul class="navbar-nav mr-auto pt-3" align="right">
       <% if user_signed_in? %>
-        <li class="nav-item dropdown">
-          <%= image_tag current_user.avatar, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" } %>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Dashboard", dashboards_path, class: "dropdown-item", style: "color: #11BF98" %>
-            <%= link_to "Host an office", "#", class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          </div>
+        <li class="nav-item active">
+          <%= link_to "Dashboard", dashboards_path, class: "nav-link", style: "color: #11BF98" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Host an office", "#", class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
         </li>
       <% else %>
         <li class="nav-item">
@@ -25,5 +33,9 @@
         </li>
       <% end %>
     </ul>
+    <!-- Links -->
+
   </div>
-</div>
+  <!-- Collapsible content -->
+</nav>
+<!--/.Navbar-->
