--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,22 +4,26 @@
   <div class="mt-3">
     <%= render 'shared/search'%>
   </div>
-  <% @offices.each do |office| %>
+  <h3 class="mt-3">Top offices in your city</h3 class="mt-3">
   <div class="row">
-    <%= link_to office_path(office) do %>
-  <div class="card-trip col-sm-6">
-    <%= cl_image_tag office.photo %>
-    <div class="card-trip-infos">
-      <div>
-        <h2><%= office.name %></h2>
-        <p><%= office.description %></p>
+    <% @offices.each do |office| %>
+    <div class="col-6 card-landing">
+      <%= link_to office_path(office) do %>
+      <div class="card-minimal">
+        <%= cl_image_tag office.photo %>
+        <div class="card-minimal-infos">
+          <div>
+            <h2><%= office.name %></h2>
+            <p><%= office.description %></p>
+          </div>
+          <h2 class="card-minimal-pricing">€15</h2>
+          <%= image_tag office.user.avatar, class: "card-minimal-user avatar-bordered" %>
+        </div>
       </div>
-      <h2 class="card-trip-pricing">€15</h2>
-      <%= image_tag office.user.avatar, class: "card-trip-user avatar-bordered" %>
-    </div>
-  </div>
-  <% end %>
 
+    </div>
+    <% end %>
+    <% end %>
   </div>
-  <% end %>
+
 </div>
