--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -21,3 +21,27 @@
     background-color: white;
   }
 }
+
+ .btn-ghost-banner {
+  opacity: 1;
+  color: white;
+  background-color: $green;
+  border: 1px solid $green;
+  padding: 8px 24px;
+  margin-bottom: 10px;
+  border-radius: 50px;
+  opacity: 1;
+  transition: opacity 0.3s ease;
+  display: block;
+  width: 100%;
+  font-style: normal;
+  font-weight: medium;
+  text-align: center;
+  font-size: 24px;
+
+  &:hover {
+
+    color: $green;
+    background-color: white;
+  }
+}
