--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,9 @@
   <div class="banner-text">
     <h2>The office you will not want to leave</h2>
     <p>Find an affordable & nearby space to work and meet other professionals</p>
+    <%= link_to offices_path do %>
+    <div class='btn-ghost-banner'>Browse offices</div>
+    <% end %>
   </div>
 </div>
 <div class="container">
