added border to button and changed image url in banner

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 #banner-container {
-  background-image: url(banner-pic.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), asset-url('banner-pic.jpg');
   height: 91vh;
   background-size: cover;
   background-repeat: no-repeat;
