--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div id="banner-container">
-  <div class="banner-text">
+  <div class="banner-text container mb-3">
     <h2>The office you will not want to leave</h2>
     <p>Find an affordable & nearby space to work and meet other professionals</p>
     <%= link_to offices_path do %>
