Added the stripe setup and controller code

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-sm navbar-light navbar-lewagon">
 
   <!-- Navbar brand -->
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
   <% end %>
 
