End of Css styling in landing page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 #banner-container {
   background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), asset-url('banner-pic.jpg');
-  height: 91vh;
+  height: 681px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom 1px right 0px;
@@ -21,4 +21,8 @@
     border-radius: 5px;
     padding: 15px;
   }
+}
+
+.card-minimal-text {
+  height: 66px;
 }
