Added webhooks to the payment flow.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <h2>The office you will not want to leave</h2>
     <p>Find an affordable & nearby space to work and meet other professionals</p>
     <%= link_to offices_path do %>
-    <div class='btn-ghost-banner'>Browse offices</div>
+    <div class='btn-ghost-banner'>Pick your office</div>
     <% end %>
   </div>
 </div>
