--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,8 +19,9 @@
                       input_html: { autocomplete: "new-password" } %>
         </div>
 
-        <div class="form-actions">
-          <%= f.button :submit, "Sign up" %>
+
+        <div class="form-actions" align="center">
+          <%= f.submit "Sign up", class:"btn-ghost" %>
         </div>
       <% end %>
 
