--- a/app/views/offices/show.html.erb
+++ b/app/views/offices/show.html.erb
@@ -5,8 +5,10 @@
     <%= image_tag @office.user.avatar, class: "show-avatar" %>
   </div>
   <div class="d-flex inline justify-content-between ml-3">
-    <h2><%= @office.name %></h2>
-    <h2>€15 / Day </h2>
+    <h2 class="font-weight-normal"><%= @office.name %></h2>
+    <div class="show-price">
+    <h2> <%= humanized_money_with_symbol @office.price %> / Day </h2>
+    </div>
   </div>
   <div class="show-infos">
     <div>
@@ -79,14 +81,14 @@
 <div
   id="map"
   style="width: 100%;
-  height: 600px;"
+  height: 270px;"
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 
   <br>
   <div class="show-flatpickr">
-  <h3>Date</h3>
+
 
 <%= render "bookings/new", office: @office, booking: @booking%>
 
