--- a/app/assets/stylesheets/pages/_booking_show.scss
+++ b/app/assets/stylesheets/pages/_booking_show.scss
@@ -14,6 +14,7 @@
 
 .booking-card {
   margin: 10px auto;
+  border-radius: 10px;
 }
 
 .card-body i {
@@ -26,4 +27,10 @@
 
 .reject-icon i {
 
+}
+
+.img-booking-show {
+  border-radius: 10px;
+  height: 150px;
+  width: 150px;
 }
