Finished styling the landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div id="banner-container">
   <div class="banner-text container mb-3">
-    <h2>The office you will not want to leave</h2>
+    <h2>The office you don't want to leave</h2>
     <p>Find an affordable & nearby space to work and meet other professionals</p>
     <%= link_to offices_path do %>
     <div class='btn-ghost-banner'>Pick your office</div>
@@ -12,9 +12,8 @@
     <%= render 'shared/search'%>
   </div>
   <h3 class="mt-3">Top offices in your city</h3 class="mt-3">
-    <div class="row">
       <% @offices.each do |office| %>
-      <div class="col-6 card-landing">
+      <div class="card-landing">
         <%= link_to office_path(office) do %>
         <div class="card-minimal">
           <%= cl_image_tag office.photo %>
@@ -31,6 +30,5 @@
       </div>
       <% end %>
       <% end %>
-    </div>
 
   </div>
