Completely done with dashboard (guest journey)

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,8 +29,9 @@
 .rating {
   position: absolute;
   color: $green;
-  bottom: -9px;
-  left: 343px;
+  bottom: 0px;
+  left: 348px;
+  font-size: 18px;
 }
 
 .delete {
