CSS booking confirmation

--- a/app/assets/stylesheets/pages/_booking_show.scss
+++ b/app/assets/stylesheets/pages/_booking_show.scss
@@ -1,5 +1,4 @@
 
-
 .list-group-item a {
   color: black;
 }
@@ -13,7 +12,7 @@
 }
 
 .booking-card {
-  margin: 10px auto;
+  margin: 0px auto;
   border-radius: 10px;
 }
 
@@ -34,3 +33,19 @@
   height: 150px;
   width: 150px;
 }
+
+.details-card {
+  border-radius: 10px;
+  margin-bottom: 10px;
+  border: none;
+
+}
+
+.details-card u {
+  width: 40px;
+}
+
+.list-group-item p {
+  margin-bottom: 0;
+}
+
