--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -7,7 +7,7 @@
     </div>
   </div>
   <% end %>
-  <div class="illustration">
+  <div class="illustration mb-3">
 
 <%= image_tag 'review-illustration.svg' %>
   </div>
