--- a/app/views/offices/show.html.erb
+++ b/app/views/offices/show.html.erb
@@ -60,24 +60,23 @@
   </div>
   <div class="show-review">
     <h3>Reviews</h3>
+
+    <% @office.bookings.each do |booking| %>
+    <% if booking.reviews[0] != nil && booking.reviews[0].rating != nil %>
+
     <div class="d-flex inline justify-content-between">
-      <p style="width: 65%;">Pretty cozy place to work in</p>
+      <p style="width: 65%;"><%= booking.reviews[0].content %></p>
       <div class="show-stars">
-        <% 5.times do %>
+        <% (booking.reviews[0].rating).times do %>
         <i id="card-trip-stars" class="fas fa-star"></i>
+        <% end %>
         <% end %>
       </div>
     </div>
-    <div class="d-flex inline justify-content-between">
-      <p style="width: 65%;">Georgous place to meet interesting people</p>
-      <div class="show-stars">
-        <% 4.times do %>
-        <i id="card-trip-stars" class="fas fa-star"></i>
-        <% end %>
-      </div>
-    </div>
+    <% end %>
   </div>
 </div>
+<br>
 <div
   id="map"
   style="width: 100%;
